[project]
name = "rf_processtree"
dynamic = ["version"]
authors = [
    {name = "Franz Haas", email = "franz.dominik.haas@gmail.com"},
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["robotframework"]
license = "Apache-2.0"
keywords = ["robotframework"]

[project.urls]
Documentation = "https://franzhaas.github.io/robotframework-processtree/index.html"
Repository = "https://github.com/franzhaas/robotframework-processtree"
Release_Notes = "https://franzhaas.github.io/robotframework-processtree/release_notes.md"

[dependency-groups]
dev = ["ipython", "xonsh[full]"]
test = ["ruff", "mypy"]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"

[tool.hatch.version.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 150
                                                                                                                                                      